# RAGLight

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: bedrock_example.py  hybrid_search_example.py  langfuse_example.py  qdrant_example.py
examples/serve_example/: .env.example  docker-compose.yml
src/raglight/: __init__.py
src/raglight/api/: __init__.py  app.py  router.py  server_config.py
src/raglight/cli/: main.py
src/raglight/config/: agentic_rag_config.py  langfuse_config.py  rag_config.py  settings.py  vector_store_config.py
src/raglight/cross_encoder/: cross_encoder_model.py
src/raglight/document_processing/: document_processor.py  vlm_pdf_processor.py
src/raglight/embeddings/: bedrock_embeddings.py  gemini_embeddings.py  ollama_embeddings.py  openai_embeddings.py
src/raglight/llm/: bedrock_model.py  gemini_model.py  llm.py  lmstudio_model.py  mistral_model.py  ollama_model.py  openai_model.py
src/raglight/rag/: agentic_rag.py  builder.py  rag.py  simple_agentic_rag_api.py  simple_rag_api.py
src/raglight/scrapper/: github_scrapper.py
src/raglight/ui/: streamlit_app.py
tests/: __init__.py  conftest.py  test_config.py
tests/tests_api/: test_router.py  test_server_config.py
tests/tests_document_processing/: test_document_processors.py
tests/tests_embeddings/: test_bedrock_embeddings.py  test_gemini_embeddings.py  test_huggingface_embeddings.py  test_ollama_embeddings.py  test_openai_embeddings.py
tests/tests_llm/: test_bedrock_model.py  test_gemini_model.py  test_ollama_model.py
tests/tests_rag/: test_builder.py  test_rag.py
tests/tests_scrapper/: test_github_scrapper.py
tests/tests_vector_store/: test_hybrid_search.py
(+4 files in other folders)
